<resources>
    <string name="app_name">Android Feeds</string>
    <string name="change_orientation">改变方向</string>
    <string name="csdn">CSDN</string>
    <string name="hukai">胡凯</string>
    <string name="public_account">公众号</string>
    <string name="droid_yue">技术小黑屋</string>
    <string name="loading_failed">加载失败，点击重试</string>
    <string name="styling_android">Styling Android</string>
    <string name="styling_android_info">A technical guide to improving the UI and UX of Android apps.</string>
    <string name="styling_android_about">
I am Mark Allison, a software developer with over 30 years’ experience, and over 4 years’ Android development experience. I run Styling Android Limited, an Android software development consultancy.\n
\n
I decided to write this blog because, while there is plenty of information regarding Android development in general, there is comparatively less information on styling and, in particular, theming Android apps. While much can be learned by browsing the Android source code, this can be a fairly difficult process, and often it is not easy to find precisely what you’re looking for.\n
\n
It is assumed that the reader is familiar with Android development in general.\n
\n
The views expressed within this blog are mine and do not represent those of my employer.\n</string>
    <string name="dan_lew">Dan Lew</string>
    <string name="dan_lew_info">Thoughts on life, the universe and the mystery of it all; but actually mostly just code.</string>
    <string name="hukai_about"><br>Hi，我是<b>胡凯</b>，就职于腾讯从事Android开发的工作。有任何问题，你可以直接写<a href="mailto:hukai.me@gmail.com"><b>邮件</b></a>给我，也可以通过<a href="http://weibo.com/kesenhoo" target="_blank"><b>微博</b></a>联系到我，另外还可以关注我的<a href="https://github.com/kesenhoo" target="_blank"><b>Github</b></a>，欢迎一起学习交流！</br></string>
    <string name="favorite">收藏</string>
</resources>
