<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/styling_android_list_collapsing_toolbar"
            android:layout_width="match_parent"
            app:title="@null"
            app:contentScrim="@color/styling_android_color"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0">
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="5dp"
                    android:src="@drawable/styling_android_logo"/>
                <TextView
                    android:id="@+id/styling_android_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/styling_android"
                    android:layout_toEndOf="@id/logo"
                    android:textColor="@color/styling_android_50"
                    android:textSize="25sp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/logo"
                    android:padding="5dp"
                    android:layout_below="@id/styling_android_title"
                    android:text="@string/styling_android_info"
                    android:textColor="@color/styling_android_100"/>
                <TextView
                    android:id="@+id/styling_android_list_text"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/logo"
                    android:maxLines="4"
                    android:drawableBottom="@drawable/ic_arrow_drop_down_white_24dp"
                    android:textColor="@color/styling_android_100"
                    android:text="@string/styling_android_about"/>
            </RelativeLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/styling_android_list_toolbar"
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"
                android:layout_height="?attr/actionBarSize"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/styling_android_list_refresh_layout"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/styling_android_list_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>